--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vueprime-profitpulse",
+  "name": "profitpulse",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,13 +10,11 @@
   },
   "dependencies": {
     "primeicons": "^6.0.1",
-    "primereact": "^10.0.7",
-    "primevue": "^3.38.1",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "primereact": "^10.2.1",
+    "vue": "^3.3.11"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.2.3",
-    "vite": "^4.4.5"
+    "@vitejs/plugin-vue": "^4.5.2",
+    "vite": "^5.0.8"
   }
 }
