--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "primeicons": "^6.0.1",
     "primereact": "^10.2.1",
+    "primevue": "^3.44.0",
     "vue": "^3.3.11"
   },
   "devDependencies": {
